<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bg"
        android:foregroundGravity="top"
        android:scaleType="fitXY"
        android:src="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        android:elevation="4dp"
        android:foregroundGravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/shakti"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backgroundImage"
        app:layout_constraintVertical_bias="0.297" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:fontFamily="@font/title_font"
        android:letterSpacing="0.12"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backgroundImage"
        app:layout_constraintVertical_bias="0.739" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/sign_up"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/primary"
            android:elevation="3dp"
            android:fontFamily="@font/pontano_sans"
            android:translationZ="2dp"
            android:textStyle="bold"
            android:stateListAnimator="@null"
            android:layout_marginBottom="18dp"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/white"
            android:elevation="4dp"
            android:translationZ="2dp"
            android:fontFamily="@font/pontano_sans"
            android:textStyle="bold"
            android:stateListAnimator="@null"
            android:text="@string/login"
            android:textSize="20sp"
            android:textColor="@color/primary" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>